[package]
name = "opus_codec"
description = "Opus Interactive Audio Codec — Rust low-level FFI bindings"
repository = "https://github.com/PtaxLaine/opus-codec-rs"
version = "1.3.1"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"
authors = ["Andrei V <andrei@ptaxa.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.51"
curl = "0.4"
digest = "0.9"
sha2 = "0.9"
hex = "0.4"
zip = "0.5"
cmake = "0.1"
